version/0.30/_sources/api/solver/_autosummary/settings/solve_frequency.rst.txt
:orphan:

.. _solve_frequency:

solve_frequency
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.solve_frequency
    :show-inheritance:

.. rubric:: Attributes

==============================================   ================================================================================

Attribute                                                                                                                 Summary

==============================================   ================================================================================
:ref:`method <method_2>`                             Specifies whether to update radiation-model based on time-step or flow-time.

:ref:`time_step_interval <time_step_interval>`                             Time-step interval at which to update radiation model.

:ref:`time_interval <time_interval>`                                       Flow-time interval at which to update radiation model.

:ref:`iteration_interval <iteration_interval>`                             Iteration interval at which to update radiation model.

==============================================   ================================================================================

.. rubric:: Included in:

============================   ======================================

Parent                                                        Summary

============================   ======================================
:ref:`radiation <radiation>`       Model for radiative heat-transfer.

============================   ======================================

