version/0.42/_sources/api/solver/_autosummary/settings/solve_frequency.rst.txt
:orphan:

.. _solve_frequency:

solve_frequency
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.solve_frequency
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ================================================================================

Attribute                                                                                                                                       Summary

====================================================================   ================================================================================
:ref:`method <method_2>`                                                   Specifies whether to update radiation-model based on time-step or flow-time.

:ref:`time_step_interval <time_step_interval>`                                                   Time-step interval at which to update radiation model.

:ref:`time_interval <time_interval>`                                                                  Time interval at which to update radiation model.

:ref:`iteration_interval <iteration_interval>`                                                   Iteration interval at which to update radiation model.

:ref:`maximum_radiation_iterations <maximum_radiation_iterations>`                                      Maximum Radiation Iterations(number of sweeps).

:ref:`residual_convergence_criteria <residual_convergence_criteria>`                                                    Residual Convergence Criterion.

:ref:`number_of_histories <number_of_histories>`                                                                        The target number of histories.

====================================================================   ================================================================================

.. rubric:: Included in:

============================   ======================================

Parent                                                        Summary

============================   ======================================
:ref:`radiation <radiation>`       Model for radiative heat-transfer.

============================   ======================================

